Il suffit qu'un bloc soit déclaré dans un cours du serveur pour accéder à l'ensemble des occurrences de référenteil du serveur,
en importer ou en créer de nouveaux.


Installation des briques constituant l'application Référentiel de Moodle

    Installer d'abord (ou mettre à jour) le module Référentiel dans le dossier
    ./mod/
    Installer ensuite le bloc Référentiel dans le dossier
    ./blocks/
    Pour terminer installer le rapport Référentiel dans le dossier
    ./report/

Consultez la documentation détaillée :

http://moodlemoot2009.insa-lyon.fr/mod/resource/view.php?id=371


---------------------------------------------------------
Historique des versions 
---------------------------------------------------------
Ceci est la partie activité du module Référentiel
This is the activity module for Referentiel plugin

Référentiel pour Moodle 2.4, 2.5 avec barèmes
Referentiel for Moodle 2.4, 2.5  with scales support
---------------------------------------------
Version 10.00 (2014022803) for Moodle 2.4 et 2.5 with scale support and block
Release 2014-03-29
Pagination de l'affichage des activités

Version 10.00 (2014021500) for Moodle 2.4 et 2.5 with scales support and block
Release 2014-03-24
Correction bug dans la modifcation globale des activités
Release 2014-02-27
Lancaster assign mahara plugin support  (uses MNET connextion to Mahara)
Release 2014-02-26
Assign plugin support
Portland assign mahara plugin support (uses MNET connextion to Mahara)

Release 2013-02-17
Amélioration de l'affichage si le bloc Référentiel n'est pas installé.

Release 2013-02-15
Version simplifiée.
Suppression de l'éditeur wyiwyg pour les référentiel simplifiés
La définition / modification des occurrences de référentiel s'appuie exclusivement sur le block référentiel
Simplified version.
No more wyiswyg editor for skills repository occurrence
Referential Occurrence definition and  modification use the referentiel's block

